--- a/Photos55/bin/Photos55/view/admin.fxml
+++ b/Photos55/bin/Photos55/view/admin.fxml
@@ -10,7 +10,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Photos55.view.adminController">
    <children>
-      <Button layoutX="533.0" layoutY="22.0" mnemonicParsing="false" text="Quit" />
+      <Button layoutX="533.0" layoutY="22.0" mnemonicParsing="false" text="Quit" onAction="#quit"/>
       <Button fx:id="logoutButton" layoutX="469.0" layoutY="22.0" mnemonicParsing="false" text="Logout" onAction="#logout"/>
       <Text layoutX="20.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin Subsystem">
          <font>
