--- a/Photos55/src/Photos55/view/Login.fxml
+++ b/Photos55/src/Photos55/view/Login.fxml
@@ -9,7 +9,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Photos55.view.loginController">
    <children>
-      <Button layoutX="533.0" layoutY="22.0" mnemonicParsing="false" text="Quit" />
+      <Button layoutX="533.0" layoutY="22.0" mnemonicParsing="false" text="Quit" onAction="#quit" />
       <Button layoutX="506.0" layoutY="-60.0" mnemonicParsing="false" text="Logout" />
       <Text layoutX="100.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username:">
          <font>
