--- a/Photos55/src/Photos55/view/album.fxml
+++ b/Photos55/src/Photos55/view/album.fxml
@@ -57,10 +57,10 @@
             <Font size="23.0" />
          </font>
       </Text>
-      <ChoiceBox layoutX="14.0" layoutY="361.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="dropdownMenu" layoutX="14.0" layoutY="361.0" prefWidth="150.0" />
       <Text layoutX="14.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Album:" />
-      <Button layoutX="171.0" layoutY="361.0" mnemonicParsing="false" text="Copy to" />
-      <Button layoutX="234.0" layoutY="361.0" mnemonicParsing="false" text="Move to" />
+      <Button layoutX="171.0" layoutY="361.0" mnemonicParsing="false" onAction="#copyPhoto" text="Copy to" />
+      <Button layoutX="234.0" layoutY="361.0" mnemonicParsing="false" onAction="#movePhoto" text="Move to" />
       <Button layoutX="108.0" layoutY="58.0" mnemonicParsing="false" onAction="#addPhoto" text="Add Photo" />
       <Button layoutX="186.0" layoutY="58.0" mnemonicParsing="false" onAction="#removePhoto" text="Remove Photo" />
       <Button layoutX="423.0" layoutY="22.0" mnemonicParsing="false" onAction="#back" text="Back" />
