--- a/Photos55/src/Photos55/view/search.fxml
+++ b/Photos55/src/Photos55/view/search.fxml
@@ -7,69 +7,68 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Photos55.view.searchController">
    <children>
-      <Button layoutX="533.0" layoutY="22.0" mnemonicParsing="false" text="Quit" onAction="#quit"/>
-      <Button fx:id="logoutButton" layoutX="469.0" layoutY="22.0" mnemonicParsing="false" text="Logout" onAction="#logout"/>
+      <Button layoutX="533.0" layoutY="22.0" mnemonicParsing="false" onAction="#quit" text="Quit" />
+      <Button fx:id="logoutButton" layoutX="469.0" layoutY="22.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
       <Text layoutX="20.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search Results">
          <font>
             <Font name="Comic Sans MS" size="24.0" />
          </font>
       </Text>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="369.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="currentView" fitHeight="150.0" fitWidth="201.0" layoutX="369.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../OneDrive/Pictures/40f.png" />
          </image>
       </ImageView>
       <Text layoutX="372.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Image" />
-      <TextField layoutX="412.0" layoutY="245.0" prefHeight="25.0" prefWidth="118.0" />
+      <TextField fx:id="captionField" layoutX="412.0" layoutY="245.0" prefHeight="25.0" prefWidth="118.0" />
       <Text layoutX="366.0" layoutY="262.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Caption" />
-      <Button layoutX="534.0" layoutY="245.0" mnemonicParsing="false" text="Add/Edit" />
+      <Button layoutX="534.0" layoutY="245.0" mnemonicParsing="false" onAction="#changeCaption" text="Add/Edit" />
       <Text layoutX="366.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date/Time:" />
-      <Text layoutX="432.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Button layoutX="540.0" layoutY="367.0" mnemonicParsing="false" text="Add" />
-      <Button layoutX="533.0" layoutY="310.0" mnemonicParsing="false" text="Delete" />
-      <ScrollPane layoutX="14.0" layoutY="84.0" prefHeight="260.0" prefWidth="266.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
-               <children>
-                  <ImageView fitHeight="100.0" fitWidth="92.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../OneDrive/Pictures/40f.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="82.0" fitWidth="63.0" layoutX="115.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../OneDrive/Pictures/-51609522572hfwmv9rxvj.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
-        </content>
+      <Text fx:id="dateField" layoutX="432.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Button layoutX="533.0" layoutY="361.0" mnemonicParsing="false" onAction="#addTag" text="Add" />
+      <Button layoutX="527.0" layoutY="332.0" mnemonicParsing="false" onAction="#deleteTag" text="Delete" />
+      <ScrollPane layoutX="14.0" layoutY="84.0" prefHeight="260.0" prefWidth="340.0">
+         <content>
+            <GridPane fx:id="imageGrid" maxWidth="335" prefHeight="173.0" prefWidth="310">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+         </content>
       </ScrollPane>
       <Text layoutX="18.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Images">
          <font>
             <Font size="23.0" />
          </font>
       </Text>
-      <Button layoutX="167.0" layoutY="363.0" mnemonicParsing="false" text="Create Album From Results" />
-      <Button layoutX="420.0" layoutY="22.0" mnemonicParsing="false" text="Back" onAction="#back"/>
-      <TextField layoutX="11.0" layoutY="364.0" />
-      <Text layoutX="9.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Album Name:" />
-      <TextField layoutX="383.0" layoutY="368.0" prefHeight="25.0" prefWidth="58.0" />
-      <Text layoutX="361.0" layoutY="385.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tag" />
-      <TextField layoutX="477.0" layoutY="368.0" prefHeight="25.0" prefWidth="58.0" />
-      <Text layoutX="444.0" layoutY="385.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Value" />
-      <TableView layoutX="372.0" layoutY="280.0" prefHeight="86.0" prefWidth="162.0">
-         <columns>
-            <TableColumn prefWidth="75.0" text="Tag" />
-            <TableColumn prefWidth="86.0" text="Value" />
-         </columns>
+      <Text layoutX="14.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Album Name:" />
+      <Button layoutX="171.0" layoutY="361.0" mnemonicParsing="false" onAction="#createFromResults" text="Create Album From Results" />
+      <Button layoutX="423.0" layoutY="22.0" mnemonicParsing="false" onAction="#back" text="Back" />
+      <TableView fx:id="tagTable" layoutX="362.0" layoutY="276.0" prefHeight="86.0" prefWidth="162.0">
+        <columns>
+          <TableColumn fx:id="Tag" prefWidth="75.0" text="Tag" />
+          <TableColumn fx:id="Value" prefWidth="86.0" text="Value" />
+        </columns>
       </TableView>
+      <TextField fx:id="tagToAdd" layoutX="373.0" layoutY="364.0" prefHeight="25.0" prefWidth="58.0" />
+      <Text layoutX="351.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tag" />
+      <TextField fx:id="valueToAdd" layoutX="467.0" layoutY="364.0" prefHeight="25.0" prefWidth="58.0" />
+      <Text layoutX="434.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Value" />
+      <TextField fx:id="albumField" layoutX="17.0" layoutY="361.0" />
    </children>
 </Pane>
