--- a/Photos55/src/Photos55/view/album.fxml
+++ b/Photos55/src/Photos55/view/album.fxml
@@ -35,11 +35,11 @@
       <Button layoutX="534.0" layoutY="245.0" mnemonicParsing="false" onAction="#changeCaption" text="Add/Edit" />
       <Text layoutX="366.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date/Time:" />
       <Text fx:id="dateField" layoutX="432.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Button layoutX="533.0" layoutY="361.0" mnemonicParsing="false" text="Add" onAction="#addTag" />
-      <Button layoutX="527.0" layoutY="332.0" mnemonicParsing="false" text="Delete" onAction="#deleteTag" />
+      <Button layoutX="533.0" layoutY="361.0" mnemonicParsing="false" onAction="#addTag" text="Add" />
+      <Button layoutX="527.0" layoutY="332.0" mnemonicParsing="false" onAction="#deleteTag" text="Delete" />
       <ScrollPane layoutX="14.0" layoutY="84.0" prefHeight="260.0" prefWidth="340.0">
          <content>
-            <GridPane fx:id="imageGrid" prefHeight="173.0" prefWidth="310" maxWidth="335">
+            <GridPane fx:id="imageGrid" maxWidth="335" prefHeight="173.0" prefWidth="310">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -61,8 +61,8 @@
       <Text layoutX="14.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Album:" />
       <Button layoutX="171.0" layoutY="361.0" mnemonicParsing="false" onAction="#copyPhoto" text="Copy to" />
       <Button layoutX="234.0" layoutY="361.0" mnemonicParsing="false" onAction="#movePhoto" text="Move to" />
-      <Button layoutX="108.0" layoutY="58.0" mnemonicParsing="false" onAction="#addPhoto" text="Add Photo" />
-      <Button layoutX="186.0" layoutY="58.0" mnemonicParsing="false" onAction="#removePhoto" text="Remove Photo" />
+      <Button layoutX="101.0" layoutY="58.0" mnemonicParsing="false" onAction="#addPhoto" text="Add Photo" />
+      <Button layoutX="174.0" layoutY="58.0" mnemonicParsing="false" onAction="#removePhoto" text="Remove Photo" />
       <Button layoutX="423.0" layoutY="22.0" mnemonicParsing="false" onAction="#back" text="Back" />
       <TableView fx:id="tagTable" layoutX="362.0" layoutY="276.0" prefHeight="86.0" prefWidth="162.0">
         <columns>
@@ -74,5 +74,6 @@
       <Text layoutX="351.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tag" />
       <TextField fx:id="valueToAdd" layoutX="467.0" layoutY="364.0" prefHeight="25.0" prefWidth="58.0" />
       <Text layoutX="434.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Value" />
+      <Button layoutX="274.0" layoutY="58.0" mnemonicParsing="false" onAction="#present" text="Present" />
    </children>
 </Pane>
