--- a/Photos55/bin/Photos55/view/Login.fxml
+++ b/Photos55/bin/Photos55/view/Login.fxml
@@ -6,17 +6,21 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Photos55.view.loginController">
    <children>
-      <Button layoutX="533.0" layoutY="22.0" mnemonicParsing="false" text="Quit" onAction="#quit" />
-      <Button layoutX="506.0" layoutY="-60.0" mnemonicParsing="false" text="Logout" />
-      <Text layoutX="100.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username:">
+      <Text layoutX="61.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Photo Album" wrappingWidth="260.10303765535355">
          <font>
-            <Font name="Comic Sans MS" size="24.0" />
+            <Font name="Comic Sans MS" size="36.0" />
+         </font>
+      </Text>
+      <Button layoutX="533.0" layoutY="22.0" mnemonicParsing="false" onAction="#quit" text="Quit" />
+      <Button layoutX="506.0" layoutY="-60.0" mnemonicParsing="false" text="Logout" />
+      <Text layoutX="100.0" layoutY="169.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username:">
+         <font>
+            <Font name="Comic Sans MS" size="14.0" />
          </font>
       </Text>
       <TextField fx:id="usernameField" layoutX="100.0" layoutY="175.0" />
-      <Button fx:id="loginButton" layoutX="261.0" layoutY="175.0" mnemonicParsing="false" text="Enter" onAction="#login"/>
+      <Button fx:id="loginButton" layoutX="261.0" layoutY="175.0" mnemonicParsing="false" onAction="#login" text="Enter" />
    </children>
 </Pane>
