--- a/Photos55/src/Photos55/view/admin.fxml
+++ b/Photos55/src/Photos55/view/admin.fxml
@@ -7,21 +7,23 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Photos55.view.adminController">
    <children>
-      <Button layoutX="533.0" layoutY="22.0" mnemonicParsing="false" text="Quit" onAction="#quit"/>
-      <Button fx:id="logoutButton" layoutX="469.0" layoutY="22.0" mnemonicParsing="false" text="Logout" onAction="#logout"/>
+      <Button layoutX="533.0" layoutY="22.0" mnemonicParsing="false" onAction="#quit" text="Quit" />
+      <Button fx:id="logoutButton" layoutX="469.0" layoutY="22.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
       <Text layoutX="20.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin Subsystem">
          <font>
             <Font name="Comic Sans MS" size="24.0" />
          </font>
       </Text>
-      <Button layoutX="418.0" layoutY="317.0" mnemonicParsing="false" text="Create" onAction="#addUser"/>
-      <TextField fx:id="newuser" layoutX="253.0" layoutY="317.0" />
+      <Button layoutX="250.0" layoutY="328.0" mnemonicParsing="false" onAction="#addUser" text="Create" />
+      <TextField fx:id="newuser" layoutX="91.0" layoutY="329.0" />
       <ListView fx:id="users" layoutX="91.0" layoutY="91.0" prefHeight="200.0" prefWidth="200.0" />
-      <Text layoutX="91.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Users" />
-      <Button layoutX="302.0" layoutY="91.0" mnemonicParsing="false" text="Delete" onAction="#deleteUser"/>
-      <Text layoutX="197.0" layoutY="334.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New User"/>
+      <Text layoutX="91.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Users">
+         <font>
+            <Font name="Comic Sans MS" size="12.0" />
+         </font></Text>
+      <Button layoutX="302.0" layoutY="91.0" mnemonicParsing="false" onAction="#deleteUser" prefHeight="43.0" prefWidth="53.0" text="Delete" />
+      <Text layoutX="91.0" layoutY="321.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New User" />
    </children>
 </Pane>
