--- a/Photos55/src/Photos55/view/album.fxml
+++ b/Photos55/src/Photos55/view/album.fxml
@@ -24,19 +24,19 @@
             <Font name="Comic Sans MS" size="24.0" />
          </font>
       </Text>
-      <ImageView fx:id="currentView" fitHeight="150.0" fitWidth="201.0" layoutX="369.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="currentView" fitHeight="144.0" fitWidth="229.0" layoutX="362.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../OneDrive/Pictures/40f.png" />
          </image>
       </ImageView>
-      <Text layoutX="372.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Image" />
-      <TextField fx:id="captionField" layoutX="412.0" layoutY="245.0" prefHeight="25.0" prefWidth="118.0" />
-      <Text layoutX="366.0" layoutY="262.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Caption" />
-      <Button layoutX="534.0" layoutY="245.0" mnemonicParsing="false" onAction="#changeCaption" text="Add/Edit" />
-      <Text layoutX="366.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date/Time:" />
-      <Text fx:id="dateField" layoutX="432.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Button layoutX="533.0" layoutY="361.0" mnemonicParsing="false" onAction="#addTag" text="Add" />
-      <Button layoutX="527.0" layoutY="332.0" mnemonicParsing="false" onAction="#deleteTag" text="Delete" />
+      <Text layoutX="435.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Image" />
+      <TextField fx:id="captionField" layoutX="408.0" layoutY="241.0" prefHeight="25.0" prefWidth="118.0" />
+      <Text layoutX="362.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Caption" />
+      <Button contentDisplay="CENTER" layoutX="534.0" layoutY="223.0" mnemonicParsing="false" onAction="#changeCaption" prefHeight="44.0" prefWidth="59.0" text="Set&#10;Caption" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" />
+      <Text layoutX="362.0" layoutY="234.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date" />
+      <Text fx:id="dateField" layoutX="410.0" layoutY="234.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Button layoutX="543.0" layoutY="331.0" mnemonicParsing="false" onAction="#addTag" text="Add" />
+      <Button layoutX="536.0" layoutY="367.0" mnemonicParsing="false" onAction="#deleteTag" prefHeight="26.0" prefWidth="53.0" text="Delete" />
       <ScrollPane layoutX="14.0" layoutY="84.0" prefHeight="260.0" prefWidth="340.0">
          <content>
             <GridPane fx:id="imageGrid" maxWidth="335" prefHeight="173.0" prefWidth="310">
@@ -57,23 +57,21 @@
             <Font size="23.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="dropdownMenu" layoutX="14.0" layoutY="361.0" prefWidth="150.0" />
-      <Text layoutX="14.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Album:" />
-      <Button layoutX="171.0" layoutY="361.0" mnemonicParsing="false" onAction="#copyPhoto" text="Copy to" />
-      <Button layoutX="234.0" layoutY="361.0" mnemonicParsing="false" onAction="#movePhoto" text="Move to" />
-      <Button layoutX="101.0" layoutY="58.0" mnemonicParsing="false" onAction="#addPhoto" text="Add Photo" />
-      <Button layoutX="174.0" layoutY="58.0" mnemonicParsing="false" onAction="#removePhoto" text="Remove Photo" />
+      <ChoiceBox fx:id="dropdownMenu" layoutX="31.0" layoutY="361.0" prefWidth="150.0" />
+      <Text layoutX="31.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Album" />
+      <Button layoutX="188.0" layoutY="361.0" mnemonicParsing="false" onAction="#copyPhoto" text="Copy to" />
+      <Button layoutX="251.0" layoutY="361.0" mnemonicParsing="false" onAction="#movePhoto" text="Move to" />
+      <Button layoutX="120.0" layoutY="51.0" mnemonicParsing="false" onAction="#addPhoto" text="Add Photo" />
+      <Button layoutX="200.0" layoutY="51.0" mnemonicParsing="false" onAction="#removePhoto" text="Remove Photo" />
       <Button layoutX="423.0" layoutY="22.0" mnemonicParsing="false" onAction="#back" text="Back" />
       <TableView fx:id="tagTable" layoutX="362.0" layoutY="276.0" prefHeight="86.0" prefWidth="162.0">
         <columns>
-          <TableColumn fx:id="Tag" prefWidth="75.0" text="Tag" />
-          <TableColumn fx:id="Value" prefWidth="86.0" text="Value" />
+          <TableColumn fx:id="Tag" prefWidth="80.973876953125" text="Tag" />
+          <TableColumn fx:id="Value" prefWidth="82.64352416992188" text="Value" />
         </columns>
       </TableView>
-      <TextField fx:id="tagToAdd" layoutX="373.0" layoutY="364.0" prefHeight="25.0" prefWidth="58.0" />
-      <Text layoutX="351.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tag" />
-      <TextField fx:id="valueToAdd" layoutX="467.0" layoutY="364.0" prefHeight="25.0" prefWidth="58.0" />
-      <Text layoutX="434.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Value" />
-      <Button layoutX="274.0" layoutY="58.0" mnemonicParsing="false" onAction="#present" text="Present" />
+      <TextField fx:id="tagToAdd" layoutX="362.0" layoutY="367.0" prefHeight="26.0" prefWidth="79.0" promptText="Tag" />
+      <TextField fx:id="valueToAdd" layoutX="445.0" layoutY="367.0" prefHeight="26.0" prefWidth="79.0" promptText="Value" />
+      <Button fx:id="presentButton" layoutX="300.0" layoutY="51.0" mnemonicParsing="false" onAction="#present" text="Present" />
    </children>
 </Pane>
