--- a/Photos55/src/Photos55/view/search.fxml
+++ b/Photos55/src/Photos55/view/search.fxml
@@ -23,19 +23,19 @@
             <Font name="Comic Sans MS" size="24.0" />
          </font>
       </Text>
-      <ImageView fx:id="currentView" fitHeight="150.0" fitWidth="201.0" layoutX="369.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="currentView" fitHeight="150.0" fitWidth="227.0" layoutX="365.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../OneDrive/Pictures/40f.png" />
          </image>
       </ImageView>
-      <Text layoutX="372.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Image" />
-      <TextField fx:id="captionField" layoutX="412.0" layoutY="245.0" prefHeight="25.0" prefWidth="118.0" />
-      <Text layoutX="366.0" layoutY="262.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Caption" />
-      <Button layoutX="534.0" layoutY="245.0" mnemonicParsing="false" onAction="#changeCaption" text="Add/Edit" />
-      <Text layoutX="366.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date/Time:" />
-      <Text fx:id="dateField" layoutX="432.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Button layoutX="533.0" layoutY="361.0" mnemonicParsing="false" onAction="#addTag" text="Add" />
-      <Button layoutX="527.0" layoutY="332.0" mnemonicParsing="false" onAction="#deleteTag" text="Delete" />
+      <Text layoutX="440.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Image" />
+      <TextField fx:id="captionField" layoutX="412.0" layoutY="240.0" prefHeight="25.0" prefWidth="118.0" />
+      <Text layoutX="366.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Caption" />
+      <Button layoutX="536.0" layoutY="223.0" mnemonicParsing="false" onAction="#changeCaption" text="Set&#10;Caption" textAlignment="CENTER" />
+      <Text layoutX="366.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date" />
+      <Text fx:id="dateField" layoutX="415.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Button layoutX="543.0" layoutY="330.0" mnemonicParsing="false" onAction="#addTag" text="Add" />
+      <Button layoutX="537.0" layoutY="364.0" mnemonicParsing="false" onAction="#deleteTag" text="Delete" />
       <ScrollPane layoutX="14.0" layoutY="84.0" prefHeight="260.0" prefWidth="340.0">
          <content>
             <GridPane fx:id="imageGrid" maxWidth="335" prefHeight="173.0" prefWidth="310">
@@ -56,19 +56,16 @@
             <Font size="23.0" />
          </font>
       </Text>
-      <Text layoutX="14.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Album Name:" />
-      <Button layoutX="171.0" layoutY="361.0" mnemonicParsing="false" onAction="#createFromResults" text="Create Album From Results" />
+      <Button layoutX="197.0" layoutY="361.0" mnemonicParsing="false" onAction="#createFromResults" text="Create Album From Results" />
       <Button layoutX="423.0" layoutY="22.0" mnemonicParsing="false" onAction="#back" text="Back" />
-      <TableView fx:id="tagTable" layoutX="362.0" layoutY="276.0" prefHeight="86.0" prefWidth="162.0">
+      <TableView fx:id="tagTable" layoutX="366.0" layoutY="275.0" prefHeight="86.0" prefWidth="162.0">
         <columns>
-          <TableColumn fx:id="Tag" prefWidth="75.0" text="Tag" />
-          <TableColumn fx:id="Value" prefWidth="86.0" text="Value" />
+          <TableColumn fx:id="Tag" prefWidth="79.3043212890625" text="Tag" />
+          <TableColumn fx:id="Value" prefWidth="82.64346313476562" text="Value" />
         </columns>
       </TableView>
-      <TextField fx:id="tagToAdd" layoutX="373.0" layoutY="364.0" prefHeight="25.0" prefWidth="58.0" />
-      <Text layoutX="351.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tag" />
-      <TextField fx:id="valueToAdd" layoutX="467.0" layoutY="364.0" prefHeight="25.0" prefWidth="58.0" />
-      <Text layoutX="434.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Value" />
-      <TextField fx:id="albumField" layoutX="17.0" layoutY="361.0" />
+      <TextField fx:id="tagToAdd" layoutX="366.0" layoutY="364.0" prefHeight="26.0" prefWidth="79.0" promptText="Tag" />
+      <TextField fx:id="valueToAdd" layoutX="449.0" layoutY="364.0" prefHeight="26.0" prefWidth="79.0" promptText="Value" />
+      <TextField fx:id="albumField" layoutX="17.0" layoutY="361.0" prefHeight="26.0" prefWidth="162.0" promptText="Album Name" />
    </children>
 </Pane>
